--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="homebg">
     <a class="homepgfont" href="#">Home</a>|
-    <a class="homepgfont" href="HTML/resume.html">Resume</a>|
-    <a class="homepgfont" href="HTML/aboutme.html">About Me</a>|
+    <a class="homepgfont" href="html/resume.html">Resume</a>|
+    <a class="homepgfont" href="html/aboutme.html">About Me</a>|
     <a class="homepgfont" href="https://jaychenny.github.io/aboutjonathan/" target="_blank">Pro Page</a>
     
     <h1 class="homepghead">Welcome to My Home Page</h1>
